--- a/src/Hearts.IdentityServer/Pages/Index.cshtml
+++ b/src/Hearts.IdentityServer/Pages/Index.cshtml
@@ -11,25 +11,25 @@
     <ul>
         <li>
             IdentityServer publishes a
-            <a href="~/.well-known/openid-configuration">discovery document</a>
+            <a class="underline text-red-500" href="~/.well-known/openid-configuration">discovery document</a>
             where you can find metadata and links to all the endpoints, key material, etc.
         </li>
         <li>
-            Click <a href="~/diagnostics">here</a> to see the claims for your current session.
+            Click <a class="underline text-red-500" href="~/diagnostics">here</a> to see the claims for your current session.
         </li>
         <li>
-            Click <a href="~/grants">here</a> to manage your stored grants.
+            Click <a class="underline text-red-500" href="~/grants">here</a> to manage your stored grants.
         </li>
         <li>
-            Click <a href="~/serversidesessions">here</a> to view the server side sessions.
+            Click <a class="underline text-red-500" href="~/serversidesessions">here</a> to view the server side sessions.
         </li>
         <li>
-            Click <a href="~/ciba/all">here</a> to view your pending CIBA login requests.
+            Click <a class="underline text-red-500" href="~/ciba/all">here</a> to view your pending CIBA login requests.
         </li>
         <li>
             Here are links to the
-            <a href="https://github.com/duendesoftware/IdentityServer">source code repository</a>,
-            and <a href="https://github.com/duendesoftware/samples">ready to use samples</a>.
+            <a class="underline text-red-500" href="https://github.com/duendesoftware/IdentityServer">source code repository</a>,
+            and <a class="underline text-red-500" href="https://github.com/duendesoftware/samples">ready to use samples</a>.
         </li>
     </ul>
 
