--- a/src/Hearts.IdentityServer/wwwroot/css/site.css
+++ b/src/Hearts.IdentityServer/wwwroot/css/site.css
@@ -11,6 +11,9 @@
     --color-red-600: oklch(57.7% 0.245 27.325);
     --color-red-700: oklch(50.5% 0.213 27.518);
     --color-red-800: oklch(44.4% 0.177 26.899);
+    --color-green-100: oklch(96.2% 0.044 156.743);
+    --color-green-400: oklch(79.2% 0.209 151.711);
+    --color-green-700: oklch(52.7% 0.154 150.069);
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-gray-800: oklch(27.8% 0.033 256.848);
@@ -606,11 +609,17 @@
   .border-gray-300 {
     border-color: var(--color-gray-300);
   }
+  .border-green-400 {
+    border-color: var(--color-green-400);
+  }
   .border-red-800 {
     border-color: var(--color-red-800);
   }
   .border-white {
     border-color: var(--color-white);
+  }
+  .bg-green-100 {
+    background-color: var(--color-green-100);
   }
   .bg-red-600 {
     background-color: var(--color-red-600);
@@ -748,6 +757,9 @@
   .text-gray-700 {
     color: var(--color-gray-700);
   }
+  .text-green-700 {
+    color: var(--color-green-700);
+  }
   .text-red-500 {
     color: var(--color-red-500);
   }
@@ -824,6 +836,11 @@
       @media (hover: hover) {
         background-color: var(--color-red-700);
       }
+    }
+  }
+  .sm\:inline {
+    @media (width >= 40rem) {
+      display: inline;
     }
   }
   .dark\:\!text-gray-300 {
