--- a/src/Hearts.BlazorApp/Components/_Imports.razor
+++ b/src/Hearts.BlazorApp/Components/_Imports.razor
@@ -5,11 +5,10 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Hearts.BlazorApp
-@using Hearts.BlazorApp.Layout
 @using Hearts.BlazorApp.Components
 @using Hearts.BlazorApp.Services.LocalStorage;
 @using Hearts.BlazorApp.Services.SignalR;
